# cacd

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  eval.py  eval_harm_baselines.py  eval_scanner_classification.py  harm_model.py  infer.py  pyproject.toml  requirements.txt  run.py  train_age_reg.py
conf/: ixi_guys-hh_2d_cacd_diffae_all_augs.json  oasis3_ixi_guys-hh_2d_cacd_diffae_all_augs.json  oasis3_ixi_guys-hh_2d_cacd_diffae_gamma.json  oasis3_ixi_guys-hh_2d_cacd_diffae_gamma_rc.json  oasis3_ixi_guys-hh_2d_vanilla_diffae.json  oasis3_ixi_guys-hh_2d_vanilla_diffae_augs.json
dataset/: dataset-subset-scanner.csv
dataset/ixi/Guys/: all.txt  train.txt  val.txt
dataset/ixi/HH/: all.txt  test.txt  train.txt
dataset/ixi/IOP/: all.txt
dataset/ms_public/: train_subjects.csv  val_subjects.csv
dataset/oasis3/: test.txt  train.txt  val.txt
dataset/wmh/: train_subjects.csv  val_subjects.csv
diffae/: callbacks.py  choices.py  config.py  config_base.py  crop.py  experiment.py  loss.py  renderer.py  slerp.py  ssim.py  templates.py  transforms.py  uniform_sampler.py  vis_utils.py
diffae/data/: base.py  dataframe.py  dataset_cached.py  glioma.py  ixi.py  mri.py  ms.py  oasis3.py  on_harmony.py  padding_utils.py  split.py  subset.py  wmh.py
diffae/diffusion/: __init__.py  base.py  diffusion.py  resample.py
diffae/eval/: data.py  edit.py  infer.py  latent.py  model.py  paired.py  sliding_window_infer.py
diffae/metrics/: masked_psnr.py
diffae/model/: __init__.py  diffae.py  diffae_id_preserve.py  latentnet.py  nn.py  unet.py
diffae/model/augmentations/: anat_reg_augs.py  bias_field.py  geometric_augment.py  gin.py  identity.py  linear_rc.py  rc_aug.py
diffae/model/blocks/: attention.py  cond_resblock.py  resblock.py  timestep_blocks.py  updownsample.py
diffae/model/encoders/: encoder.py  encoder_id_preserve.py  encoder_id_preserve_nonlinear.py  out_layers.py  (+1 more)
docs/: ON-HARMONY.MD  reproducibility_notes.md
preprocessing/registration/: register.sh  register_ixi.sh  register_ixi_from_csv.sh
preprocessing/skullstrip/: skullstrip.sh  skullstrip_from_csv.sh  skullstrip_while_register.sh
preprocessing/verify/: failed_registrations.csv  render_all.py
scripts/: repro_diff.py  slurm_train.sh
tests/: conftest.py
tests/integration/: baselines_smoke_test.py  eval_harm_baselines_test.py  train_smoke_test.py
tests/unit/: augmentations_test.py  config_test.py  diffae_id_split_test.py  diffusion_test.py  infer_test.py  losses_test.py
