[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cacd"
version = "0.1.0"
description = "CACD: Contrastive Anatomy-Contrast Disentanglement for MRI Harmonization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
  { name = "Daniel Scholz" },
]
dependencies = [
  "click~=8.1.7",
  "lightning~=2.2.0",
  "matplotlib",
  "monai-weekly==1.4.*",
  "nibabel",
  "pandas",
  "scikit-learn~=1.4.1",
  "seaborn",
  "simpleitk",
  "torch~=2.2.0",
  "torchmetrics[image]",
  "torchvision",
  "tqdm",
  "umap-learn",
  "wandb",
]

[tool.hatch.build.targets.wheel]
packages = ["diffae"]
